--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -16,7 +16,7 @@
       %tr
         %td= project.name
         %td= project.git_repo
-        %td= graphic project.pull_request_metric
+        %td= graphic project.pull_request
         %td= graphic project.slack
         %td= link_to 'Show', project
         %td= link_to 'Edit', edit_project_path(project)
