--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -7,7 +7,6 @@
     %tr
       %th Name
       %th Git repo
-      %th Pull Requests
       %th Slack
       %th{:colspan => "3"}
 
@@ -16,8 +15,7 @@
       %tr
         %td= project.name
         %td= project.git_repo
-        %td= graphic project.pull_request
-        %td= graphic project.slack_metric
+        %td= raw(graphic(project.slack_metric))
         %td= link_to 'Show', project
         %td= link_to 'Edit', edit_project_path(project)
         %td= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' }
