--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -7,7 +7,7 @@
     %tr
       %th Name
       %th Git repo
-      -# %th Slack
+      %th Slack
       %th Pull Requests
       %th{:colspan => "3"}
 
@@ -16,7 +16,7 @@
       %tr
         %td= project.name
         %td= project.git_repo
-        -# %td= raw(graphic(project.slack_metric))
+        %td= raw(slack_graphic(project.slack_metric))
         %td= raw(pull_request_graphic(project.pull_request))
         %td= link_to 'Show', project
         %td= link_to 'Edit', edit_project_path(project)
