Add css styling for slack metric [ci skip]

--- a/app/assets/stylesheets/slack_metrics.scss
+++ b/app/assets/stylesheets/slack_metrics.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the slack_metrics controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+div#slack {
+    border-color: black;
+    border-style: solid ;
+    border-width: 1px;
+    width: 25px;
+    height: 25px;
+    float: left;
+    margin: 0px;
+}
