--- a/app/assets/stylesheets/pull_requests.scss
+++ b/app/assets/stylesheets/pull_requests.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the pull_requests controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+div#pr {
+    width: 25px;
+    margin: auto;
+}
