Add header partial [ci skip]

--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,6 +1,6 @@
 %p{:id => "notice"}= notice
 
-%h1 Listing Projects
+%h2 Project Listing
 
 %table
   %thead
@@ -24,4 +24,4 @@
 
 %br
 
-= link_to 'New Project', new_project_path
+= link_to 'Add a Project', new_project_path
