slack graphics take 2

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     %title Projectscope
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     %script{:type => 'text/javascript', :src => 'https://www.gstatic.com/charts/loader.js'}
+    %script{:type => 'text/javascript', :src => 'https://www.google.com/jsapi'}
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
     /[if lt IE 9]
