--- a/app/views/pull_requests/_form.html.erb
+++ b/app/views/pull_requests/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :green %><br>
     <%= f.number_field :green %>
   </div>
+  <div class="field">
+    <%= f.label :project_id %><br>
+    <%= f.number_field :project_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
