--- a/app/views/slack_data_points/_form.html.erb
+++ b/app/views/slack_data_points/_form.html.erb
@@ -20,8 +20,8 @@
     <%= f.number_field :messages %>
   </div>
   <div class="field">
-    <%= f.label :slack_metric_id %><br>
-    <%= f.number_field :slack_metric_id %>
+    <%= f.label :project_id %><br>
+    <%= f.number_field :project_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
