--- a/app/views/slack_data_points/show.html.erb
+++ b/app/views/slack_data_points/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <strong>Slack metric:</strong>
-  <%= @slack_data_point.slack_metric_id %>
+  <strong>Project:</strong>
+  <%= @slack_data_point.project_id %>
 </p>
 
 <%= link_to 'Edit', edit_slack_data_point_path(@slack_data_point) %> |
