--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -23,6 +23,10 @@
                   %h4= project.name
                   .projectID.hidden= project.id
                   %span.text-muted= link_to project.git_repo, 'https://github.com/'+project.git_repo
+                  %div
+                    %p
+                      %a{:href => 'https://codeclimate.com/github/stevenbuccini/er-moonlighter-scheduler'}
+                        %img{:src => 'https://codeclimate.com/github/stevenbuccini/er-moonlighter-scheduler/badges/gpa.svg'}
                 %td
                   %div{:id => project.id.to_s + '-pull-request-link', :class => 'hidden'}= project_pull_request_url(project, project.pull_request, format: :json)
                   %div{:id => project.id.to_s + '-pull-request'}
