--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -31,7 +31,7 @@
                   %div{:id => project.id.to_s + '-pull-request-link', :class => 'hidden'}= project_pull_request_url(project, project.pull_request, format: :json)
                   %div{:id => project.id.to_s + '-pull-request'}
                 %td
-                  %div{:id => project.id.to_s + '-slack-link', :class => ''}= project_slack_data_points_url(project, format: :json)
+                  %div{:id => project.id.to_s + '-slack-link', :class => 'hidden'}= project_slack_data_points_url(project, format: :json)
                   %div{:id => project.id.to_s + '-slack'}
                 -#
                   %td= link_to 'Edit', edit_project_path(project)
