pull code climate badges by concatenating code climate uri with PullRequest#repo. Does not utilize a code climate model

--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -25,8 +25,8 @@
                   %span.text-muted= link_to project.pull_request.repo, 'https://github.com/'+project.pull_request.repo
                   %div
                     %p
-                      %a{:href => 'https://codeclimate.com/github/stevenbuccini/er-moonlighter-scheduler'}
-                        %img{:src => 'https://codeclimate.com/github/stevenbuccini/er-moonlighter-scheduler/badges/gpa.svg'}
+                      %a{:href => 'https://codeclimate.com/github/' + project.pull_request.repo}
+                        %img{:src => 'https://codeclimate.com/github/' + project.pull_request.repo + '/badges/gpa.svg'}
                 %td
                   %div{:id => project.id.to_s + '-pull-request-link', :class => 'hidden'}= project_pull_request_url(project, project.pull_request, format: :json)
                   %div{:id => project.id.to_s + '-pull-request'}
