fixed hover and tracker graphic

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -25,7 +25,14 @@
   text-align: center;
 }
 
+.pt-graphic {
+  margin-top: 10px;
+  width: 150px;
+  text-align: center;
+}
+
 .badge-container-gpa {
+  margin-top: 10px;
   overflow: hidden;
   position: relative;
   width:28px;
@@ -33,6 +40,7 @@
 }
 
 .badge-container-cov {
+  margin-top: 10px;
   overflow: hidden;
   position: relative;
   width:61px;
