just grabbing stuff from old branch

--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -13,7 +13,7 @@
           %thead
             %tr
               %th Project
-              %th GPA
+              %th{:class => @gpa_header}= link_to 'GPA', projects_path(:sort => 'gpa'), :id => 'gpa_header'
               %th Coverage
               %th Pull Requests
               %th Pivotal Tracker
