--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -14,9 +14,9 @@
             %tr
               %th Project
               %th{:class => @gpa_header}= link_to 'GPA', projects_path(:sort => 'gpa'), :id => 'gpa_header'
-              %th Coverage
-              %th Pull Requests
-              %th Pivotal Tracker
+              %th{:class => @coverage_header}= link_to 'Coverage', projects_path(:sort => 'coverage'), :id => 'coverage_header'
+              %th{:class => @prs_header}= link_to 'Pull Requests', projects_path(:sort => 'prs'), :id => 'prs_header' 
+              %th{:class => @pts_header}= link_to 'Pivotal Tracker', projects_path(:sort => 'pts'), :id => 'pts_header' 
               %th Slack
               -#
                 %th{:colspan => "3"}
